--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       button {
         background-color: #4caf50;
-        color: white;
+        color: #0a4d1f;
         padding: 10px 15px;
         border: none;
         border-radius: 4px;
@@ -258,7 +258,6 @@
             </div>
           </div>
         </div>
-        <!-- Additional days follow same pattern -->
 
         <div class="week-container">
           <h2>Week 2: November 4-8, 2024</h2>
