--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       #contentSection {
         display: none;
-        background-color: white;
+        background-color: rgb(251, 226, 211);
         padding: 30px;
         border-radius: 8px;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
