--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       #contentSection {
         display: none;
-        background-color: rgb(251, 226, 211);
+        background-color: white;
         padding: 30px;
         border-radius: 8px;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -303,6 +303,20 @@
           </li>
           <li>📚 Photographer's Guide to the Sony DSC-RX100 VI (260 pages)</li>
           <li>📸 Sony DSC-RX100 VI Camera (for hands-on practice)</li>
+        </ul>
+        <h2>Future Study Materials</h2>
+        <ul class="materials-list">
+          <li>
+            🌐 Udemy course: " The Complete Digital Marketing Guide - 26 Courses
+            in 1 " (72.5 hours)
+            <a
+              href="https://www.udemy.com/course/digital-marketing-guide/learn/lecture/38020124?start=0#overview"
+              target="_blank"
+              >Visit Course</a
+            >
+          </li>
+          <li>📚 TBD</li>
+          <li>📸 TBD</li>
         </ul>
       </div>
     </div>
